# pysi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  README.md  __init__.py  environment.yml  format.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spectra.py  test.py  util.py
PyPython/: AccretionDisc.py  Blackbody.py  Constants.py  Conversion.py  Error.py  FilteredSpectrum.py  Grid.py  HPC.py  Ionization.py  Log.py  PythonUtils.py  Quotes.py  Reverb.py  Simulation.py  Spectrum.py  SpectrumPlot.py  SpectrumUtils.py  Util.py  Utils.py  Wind.py  WindPlot.py  WindUtils.py  __init__.py  error.py  spectra.py  util.py  wind.py
console/: cli.py
docs/: requirements.txt
docs/source/: analysis.rst  conf.py  grids.rst  index.rst  module_docs.rst  modules.rst  output.rst  physics.rst  quickstart.rst  running.rst  simulation.rst  spectrum.rst  spectrum_create.rst  utilities.rst  utils.rst  wind.rst
examples/: py_add_parameter.py  py_analyse_run.py  py_change_parameter.py  py_check_convergence.py  py_check_errors.py  py_check_multiple.py  py_check_transphot_lum_balance.py  py_create_cell_convergence_file.py  py_create_cell_convergence_plot.py  py_create_grid.py  py_create_spectrum.py  py_find_lines.py  py_inspect_photon_file.py  py_plot.py  py_plot_cell_specrum.py  py_plot_compare_spec_tot.py  py_plot_filter_spec.py  py_plot_filtered_spectrum.py  py_plot_full_run.py  py_plot_heat_cool.py  py_plot_multiple_model_spectra.py  py_plot_optical_depth.py  py_plot_optical_depths.py  py_plot_reprocessing.py  py_plot_spec_comparison.py  py_plot_spectrum.py  py_plot_spectrum_components.py  py_plot_velocity.py  py_plot_wind.py  py_remove_bound_lines.py  py_remove_photo_xsection.py  py_remove_photoion.py  py_rm_data.py  py_rm_windsaves.py  py_run.py  setup_email_notifications.py  slurm_create.py  slurm_queue.py
examples/atomic/: py_remove_bound_lines.py  py_remove_photo_xsection.py
examples/extra/: py_check_luminosity_sinks.py  py_check_transphot_lum_balance.py  py_create_cell_convergence_file.py  py_plot_cell_specrum.py  setup_email_notifications.py
legacy-scripts/: pmspec  poptd  prepro  pspec  pwind  pyaddp  pyconv  pycspec  pyctables  pydeld  pyerr  pyprev  pyrun  pyscript  pyupdp
pyPython/: __init__.py  accretionDisc.py  atomicData.py  blackbody.py  blackhole.py  constants.py  conversion.py  error.py  filteredSpectrum.py  grid.py  hpc.py  ionization.py  log.py  mailNotifications.py  pythonUtil.py  quotes.py  simulation.py  spectrumCreate.py  spectrumPlot.py  spectrumUtil.py  windModels.py  windPlot.py  windUtil.py  windUtils.py
pypython/: __init__.py  accretiondisc.py  atomicdata.py  blackbody.py  constants.py  conversion.py  createspectrum.py  error.py  grid.py  hpc.py  ionization.py  lineanalysis.py  log.py  mailnotifs.py  plot.py  plotutil.py  simulation.py  spectrum.py  spectrumcreate.py  spectrumplot.py  spectumutil.py  util.py  wind.py  windplot.py  windutil.py
pypython/console/: cli.py
pypython/delay_dump/: __init__.py  spectrum.py
pypython/dump/: __init__.py  db.py  spectrum.py  wind.py
pypython/extra/: __init__.py  mailnotifs.py
pypython/extrautil/: log.py  logging.py  mailnotifs.py  vector.py
pypython/math/: __init__.py  accretion.py  blackbody.py  vector.py
pypython/model/: model.py
pypython/observations/: __init__.py
pypython/physics/: __init__.py  accretion.py  accretiondisc.py  blackbody.py  blackhole.py  constants.py  convert.py  ionization.py  models.py
pypython/plot/: __init__.py  misc.py  miscplot.py  spectrum.py  spectrumplot.py  wind.py
pysi/: __init__.py  error.py
scratch/: test.py
scripts/: create_run_script.py  expose_module_functions.py  p_repro  pl_mspec  pspec  py_add_parameter.py  py_change_parameter  py_change_parameter.py  py_check_convergence  py_check_convergence.py  py_check_errors.py  py_create_grid.py  py_create_run_script  py_create_run_script.py  py_create_spectrum  py_create_spectrum.py  py_create_wind_tables  py_create_wind_tables.py  py_integrate_spectrum.py  py_plot.py  py_plot_full_run.py  py_plot_multiple_model_spectra.py  py_plot_multiple_spectra.py  py_plot_multiple_spectrum.py  py_plot_optical_depth  py_plot_optical_depth.py  py_plot_photospheres.py  py_plot_reprocessing.py  py_plot_spectrum  py_plot_spectrum.py  py_plot_spectrum_components.py  py_plot_velocity.py  py_plot_wind  py_plot_wind.py  py_rm_data.py  py_run  py_run.py  pyaddp  pyconv  pycspec  (+13 more)
(+146 files in other folders)
