[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pylint.design]
max-attributes = 15
max-locals = 20

[tool.pylint.format]
max-line-length = 120
good-names = ["ax", "im", "i", "j", "k"]

[tool.poetry]
name = "pypython"
version = "4.0.0"
description = ""
authors = ["Edward J. Parkinson <saultyevil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = ">=1.10.0,<1.11.0"
aenum = ">=3.1.11,<3.2.0"
astropy = ">=5.2.1,<5.3.0"
black = ">=22.12.0,<22.13.0"
click = ">=8.1.3,<8.2.0"
dust-extinction = ">=1.1,<2.0"
furo = ">=2022.12.7,<2022.13.0"
isort = ">=5.11.4,<5.12.0"
matplotlib = ">=3.6.3,<3.7.0"
numba = ">=0.56.4,<0.57.0"
numpydoc = ">=1.5.0,<1.6.0"
numpy = ">=1.23.5,<1.24.0"
pre-commit = ">=3.0.2,<3.1.0"
psutil = ">=5.9.4,<5.10.0"
pylint = ">=2.15.10,<2.16.0"
sphinx = ">=6.1.3,<6.2.0"
sqlalchemy = ">=2.0.0,<2.1.0"
tqdm = ">=4.64.1,<4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
