[tool.poetry]
name = "pysi"
version = "4.0.0"
description = "PySi is a package and command line tool designed to make using the Monte Carlo radiative transfer and ionization code SIROCCO a wee bit easier to use."
authors = ["Edward J. Parkinson <saultyevil@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pypython = "pysi.console.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = ">=1.10.0,<1.11.0"
aenum = ">=3.1.11,<3.2.0"
astropy = ">=5.2.1,<5.3.0"
click = ">=8.1.3,<8.2.0"
dust-extinction = ">=1.1,<2.0"
matplotlib = ">=3.6.3,<3.7.0"
numba = ">=0.56.4,<0.57.0"
numpy = ">=1.23.5,<1.24.0"
psutil = ">=5.9.4,<5.10.0"
sqlalchemy = ">=2.0.0,<2.1.0"
tqdm = ">=4.64.1,<4.67.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
ruff = "^0.6.8"
sphinx = "^8.0.2"
numpydoc = "^1.8.0"
furo = "^2024.8.6"
pre-commit = "^3.8.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "ANN101", "COM812", "S311", "S101", "D100", "TRY003", "EM102"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
